# esp32-c6-fw

./: README.md
firmware/esp32-c6-01-uart/: CMakeLists.txt
firmware/esp32-c6-01-uart/main/: CMakeLists.txt
firmware/esp32-c6-01-uart/main/ap/: ap.cpp
firmware/esp32-c6-01-uart/main/hw/: hw.c  hw.h  hw_def.h
firmware/esp32-c6-01-uart/main/hw/driver/: uart.c
firmware/esp32-c6-lcd/: CMakeLists.txt  sdkconfig
firmware/esp32-c6-lcd/main/: CMakeLists.txt
firmware/esp32-c6-lcd/main/ap/: ap.cpp
firmware/esp32-c6-lcd/main/bsp/: bsp.h
firmware/esp32-c6-lcd/main/common/hw/include/: lcd.h
firmware/esp32-c6-lcd/main/common/hw/include/lcd/: st7735.h
firmware/esp32-c6-lcd/main/hw/: hw.c  hw.h  hw_def.h
firmware/esp32-c6-lcd/main/hw/driver/: gpio.c  lcd.c
firmware/esp32-c6-lcd/main/hw/driver/lcd/: st7735.c
